--- a/index.html
+++ b/index.html
@@ -9,10 +9,20 @@
 </head>
 <body>
 
-
-    <img id="image" src="/assets/img/" alt="">
+<div id="container">
+    <div id="frame">
+       <div id="frame-image">
+        <img class="image" src="/assets/img/1.jpg" alt="">
+        <img class="image" src="/assets/img/2.jpg" alt="">
+        <img class="image" src="/assets/img/3.jpg" alt="">
+        <img class="image" src="/assets/img/4.jpg" alt="">
+       </div>
+    </div>
+</div>
+   
     
 
-    <script src="/assets/script/script.js"></script>
+    <script  src="/assets/script/script.js"></script>
+    
 </body>
 </html>
